Client & Develper MVC

--- a/adopteUnDev/appsettings.json
+++ b/adopteUnDev/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "adopteundev-DB": " Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AdopteUnDev;Integrated Security=True"
+  }
 }
